js settings file

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -5,6 +5,7 @@
   <title>DSMC Cluster Monitor</title>
   <link rel='shortcut icon' href='favicon.ico'/>
   <link rel='stylesheet' type='text/css' href='style.css'/>
+  <script language='javascript'src='settings.js'></script>
   <script language='javascript'src='code.js'></script>
  </head>
  <body onLoad='updateData()'>
