--- a/www/html/index.html
+++ b/www/html/index.html
@@ -26,6 +26,14 @@
       </table>
      </th>
     </tr>
+    <tr>
+     <th colspan=3>
+      <table width='100%' >
+       <tbody id='logData'>
+       </tbody>
+      </table>
+     </th>
+    </tr>
    </tbody>
   </table>
  </body>
