--- a/www/html/index.html
+++ b/www/html/index.html
@@ -7,10 +7,16 @@
   <link rel='stylesheet' type='text/css' href='style.css'/>
   <script language='javascript'src='settings.js'></script>
   <script language='javascript'src='code.js'></script>
+  <!-- script language='javascript'src='http://dsmc1.otago.ac.nz:19999/dashboard.js'></script -->
  </head>
  <body onLoad='updateData()'>
-  <table>
+ <table>
    <tbody>
+    <tr>
+	 <td colspan=3>
+      <iframe frameborder=0 style="border: no; width: 100%; height: 96px;" src="http://dsmc0.otago.ac.nz:19999/banner.html"></iframe>
+     </td>
+    </tr>
     <tr>
      <th valign='top'>
       <table>
