--- a/www/html/index.html
+++ b/www/html/index.html
@@ -10,13 +10,17 @@
   <!-- script language='javascript'src='http://dsmc1.otago.ac.nz:19999/dashboard.js'></script -->
  </head>
  <body onLoad='updateData()'>
- <table>
+  <table style="width:100%;">
    <tbody>
     <tr>
 	 <td colspan=3>
       <iframe frameborder=0 style="border: no; width: 100%; height: 96px;" src="http://dsmc0.otago.ac.nz:19999/banner.html"></iframe>
      </td>
     </tr>
+   </tbody>
+  </table>
+  <table>
+   <tbody>
     <tr>
      <th valign='top'>
       <table>
